@@ -38,32 +38,34 @@
  * Version 2 license, then the option applies only if the new code is
  * made subject to such option by the copyright holder.
  */
-
 package org.netbeans.modules.cnd.makeproject;
 
 import java.io.File;
 import org.netbeans.api.project.ProjectManager;
-import org.netbeans.spi.queries.SharabilityQueryImplementation;
 import org.openide.util.Mutex;
 import org.netbeans.spi.queries.SharabilityQueryImplementation;
 import org.netbeans.api.queries.SharabilityQuery;
+import org.netbeans.modules.cnd.makeproject.api.configurations.ConfigurationDescriptor;
+import org.netbeans.modules.cnd.makeproject.api.configurations.ConfigurationDescriptorProvider;
 
 /**
  * SharabilityQueryImplementation for j2seproject with multiple sources
  */
 public class MakeSharabilityQuery implements SharabilityQueryImplementation {
+
     private File baseDirFile;
     private String baseDir;
     private int baseDirLength;
     private boolean privateShared;
+    private ConfigurationDescriptorProvider projectDescriptorProvider;
 
-    MakeSharabilityQuery (File baseDirFile) {
+    MakeSharabilityQuery(ConfigurationDescriptorProvider projectDescriptorProvider, File baseDirFile) {
+        this.projectDescriptorProvider = projectDescriptorProvider;
         this.baseDirFile = baseDirFile;
         this.baseDir = baseDirFile.getPath();
-	this.baseDirLength = this.baseDir.length();
+        this.baseDirLength = this.baseDir.length();
         privateShared = false;
     }
-
 
     /**
      * Check whether a file or directory should be shared.
@@ -74,46 +76,72 @@ public class MakeSharabilityQuery implements SharabilityQueryImplementation {
      * @return one of {@link org.netbeans.api.queries.SharabilityQuery}'s constants
      */
     public int getSharability(final File file) {
-        Integer ret = (Integer) ProjectManager.mutex().readAccess( new Mutex.Action() {
-            public Object run() {
+        ConfigurationDescriptor configurationDescriptor = projectDescriptorProvider.getConfigurationDescriptor();
+        if (configurationDescriptor != null && configurationDescriptor.getModified()) {
+            // Make sure all sharable files are saved on disk
+            // See IZ http://www.netbeans.org/issues/show_bug.cgi?id=153504
+            configurationDescriptor.save();
+        }
+        Integer ret = ProjectManager.mutex().readAccess(new Mutex.Action<Integer>() {
+
+            public Integer run() {
                 synchronized (MakeSharabilityQuery.this) {
-		    boolean sub = file.getPath().startsWith(baseDir);
-		    if (!sub)
-			return new Integer(SharabilityQuery.UNKNOWN);
-		    if (file.getPath().equals(baseDir))
-			return new Integer(SharabilityQuery.MIXED);
-		    if (file.getPath().length() <= baseDirLength + 1)
-			return new Integer(SharabilityQuery.UNKNOWN);
-		    String subString = file.getPath().substring(baseDirLength + 1);
-		    if (subString.equals("nbproject")) // NOI18N
-			return new Integer(SharabilityQuery.MIXED);
-		    else if (subString.equals("Makefile")) // NOI18N
-			return new Integer(SharabilityQuery.SHARABLE);
-		    else if (subString.equals("nbproject" + File.separator + "configurations.xml")) // NOI18N
-			return new Integer(SharabilityQuery.SHARABLE);
-		    else if (subString.equals("nbproject" + File.separator + "private")) // NOI18N
-			return new Integer(privateShared ? SharabilityQuery.SHARABLE : SharabilityQuery.NOT_SHARABLE); // see IZ 121796, IZ 109580 and IZ 109573
-		    else if (subString.equals("nbproject" + File.separator + "project.properties")) // NOI18N
-			return new Integer(SharabilityQuery.SHARABLE);
-		    else if (subString.equals("nbproject" + File.separator + "project.xml")) // NOI18N
-			return new Integer(SharabilityQuery.SHARABLE);
-		    else if (subString.startsWith("nbproject" + File.separator + "Makefile-")) // NOI18N
-			return new Integer(SharabilityQuery.SHARABLE);
-		    else if (subString.equals("build")) // NOI18N
-			return new Integer(SharabilityQuery.NOT_SHARABLE);
-		    else if (subString.equals("dist")) // NOI18N
-			return new Integer(SharabilityQuery.NOT_SHARABLE);
-                    return new Integer(SharabilityQuery.UNKNOWN);
+                    boolean sub = file.getPath().startsWith(baseDir);
+                    if (!sub) {
+                        return Integer.valueOf(SharabilityQuery.UNKNOWN);
+                    }
+                    if (file.getPath().equals(baseDir)) {
+                        return Integer.valueOf(SharabilityQuery.MIXED);
+                    }
+                    if (file.getPath().length() <= baseDirLength + 1) {
+                        return Integer.valueOf(SharabilityQuery.UNKNOWN);
+                    }
+                    String subString = file.getPath().substring(baseDirLength + 1);
+                    if (subString.equals("nbproject")) // NOI18N
+                    {
+                        return Integer.valueOf(SharabilityQuery.MIXED);
+                    } else if (subString.equals("Makefile")) // NOI18N
+                    {
+                        return Integer.valueOf(SharabilityQuery.SHARABLE);
+                    } else if (subString.equals("nbproject" + File.separator + "configurations.xml")) // NOI18N
+                    {
+                        return Integer.valueOf(SharabilityQuery.SHARABLE);
+                    } else if (subString.equals("nbproject" + File.separator + "private")) // NOI18N
+                    {
+                        return Integer.valueOf(privateShared ? SharabilityQuery.SHARABLE : SharabilityQuery.NOT_SHARABLE); // see IZ 121796, IZ 109580 and IZ 109573
+                    } else if (subString.equals("nbproject" + File.separator + "project.properties")) // NOI18N
+                    {
+                        return Integer.valueOf(SharabilityQuery.SHARABLE);
+                    } else if (subString.equals("nbproject" + File.separator + "project.xml")) // NOI18N
+                    {
+                        return Integer.valueOf(SharabilityQuery.SHARABLE);
+                    } else if (subString.startsWith("nbproject" + File.separator + "Makefile-")) // NOI18N
+                    {
+                        return Integer.valueOf(SharabilityQuery.SHARABLE);
+                    } else if (subString.startsWith("nbproject" + File.separator + "Package-")) // NOI18N
+                    {
+                        return Integer.valueOf(SharabilityQuery.SHARABLE);
+                    } else if (subString.startsWith("nbproject" + File.separator + "qt-")) // NOI18N
+                    {
+                        return Integer.valueOf(subString.endsWith(".pro")? SharabilityQuery.SHARABLE : SharabilityQuery.NOT_SHARABLE); // NOI18N
+                    } else if (subString.startsWith("build" + File.separator)) // NOI18N
+                    {
+                        return Integer.valueOf(SharabilityQuery.NOT_SHARABLE);
+                    } else if (subString.startsWith("dist" + File.separator)) // NOI18N
+                    {
+                        return Integer.valueOf(SharabilityQuery.NOT_SHARABLE);
+                    }
+                    return Integer.valueOf(SharabilityQuery.UNKNOWN);
                 }
             }
         });
         return ret.intValue();
     }
-    
+
     public void setPrivateShared(boolean privateShared) {
         this.privateShared = privateShared;
     }
-    
+
     public boolean getPrivateShared() {
         return privateShared;
     }
